Projetos/ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrAAC.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;

DllImport int AAC_IdentPaf_Empresa_GetRazaoSocial(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Empresa_SetRazaoSocial(const INTPTR aacHandle, const PCHAR razaoSocial);

DllImport int AAC_IdentPaf_Paf_GetBarSimilarBalanca(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetCupomMania(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetDAVDiscrFormula(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetEmitePED(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetMinasLegal(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetRecompoeGT(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetTotalizaValoresLista(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetTransfDAV(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetTransfPreVenda(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetUsaImpressoraNaoFiscal(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_SetBarSimilarBalanca(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetBarSimilarECFComum(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetCupomMania(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetDAVDiscrFormula(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetEmitePED(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetMinasLegal(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetRecompoeGT(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetTotalizaValoresLista(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetTransfDAV(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetTransfPreVenda(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetUsaImpressoraNaoFiscal(const INTPTR aacHandle, const BOOL check);